--- a/app/globals.css
+++ b/app/globals.css
@@ -93,6 +93,19 @@
 }
 
 @layer utilities {
+  
+  .animate-spin-slow {
+    animation: spin 20s linear infinite;
+  }
+
+  @keyframes spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
   .dramatic-text {
     @apply text-5xl sm:text-6xl md:text-7xl lg:text-8xl font-extrabold leading-tight tracking-tighter;
   }
